correction barre de recherche et version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ main{
 
 /****** Header ***********/
 header {
+    width: 100%;
     display: flex;
     height: 79px;
     justify-content: space-between;
@@ -93,14 +94,6 @@ header {
 .description p {
     font-size: 16px;
 }
-
-.recherche {
-    display: flex;
-    border-radius: 15px;
-    border: 1px solid var(--main-bg-color);
-    gap: 24px;
-    height: 49px;
-}
 .map-svg {
     width: 50px;
     height: 50px;
@@ -111,9 +104,20 @@ header {
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     border: 1px solid var(--main-bg-color);
+
 }
+.recherche {
+    width: 377px;
+    display: flex;
+    border-radius: 15px;
+    height: 49px;
+}
+
 .recherche input {
-    border: none;
+    border: 1px solid var(--main-bg-color);
+    width: 180px;
+    padding-left: 15px;
+
 }
 
 .recherche input::placeholder {
@@ -122,6 +126,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight:bold;
 }
 .recherche form{
     display: flex;
@@ -184,11 +189,24 @@ header {
 }
 .fa-solid {
     color: var(--main-color);
-
+}
+.fa-location-dot{
+    color:black;
 }
 .fa-fire,.fa-heart,.fa-person,.fa-money-bill-wave{
     font-size: 22px;
 }
+.infos-supplementaires-icon{
+    border:1px solid #D9D9D9;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    position: relative;
+}
+
 
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
@@ -392,13 +410,13 @@ header {
 
 /****** Footer ***********/
 footer {
+    width: 100%;
     display: flex;
     background-color: var(--main-bg-color);
-    padding: 20px;
 }
 
 footer section {
-    width: 33%;
+    width: 33.333%;
     padding:20px;
     display: flex;
     flex-direction: column;
@@ -413,6 +431,9 @@ footer section {
         gap:50px;
     }
 
+    .hebergements-and-populaires .populaires{
+       gap:20px;
+    }
     .hebergements {
         width: calc(100% - 60px);
     }
@@ -424,12 +445,10 @@ footer section {
     .populaires-cards {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        gap:20px;
     }
 
-    .populaires-cards a {
-        width: 30%;
-    }
+
 
     .populaires-cards .card-title {
         font-size: 14px;
@@ -449,7 +468,6 @@ footer section {
     .main-container {
         padding: 0;
         display:flex;
-        flex-direction: column;
         gap: 30px;
     }
 
@@ -503,10 +521,7 @@ footer section {
         width: 100%;
     }
 
-    .recherche input {
-        width: auto;
-        flex-grow: 1;
-    }
+   
     .recherche .search-icon{
         display: block;
     }
@@ -535,12 +550,17 @@ footer section {
 
     .populaires{
         order: 1;
+        
     }
     .hebergements{
         order: 2;
     }
     .hebergements-and-populaires .hebergements{
         background-color: white;
+    }
+
+    .populaires-cards{
+        gap: 15px;
     }
     .hebergements-cards a,
     .populaires-cards a,
